[CW10]
* Fix CreateInteractionChoiceSet, SetGlobalProperties, and Speak layouts.

[CW9]
* Fix: don't send a Show request on OnHMIStatus after an Alert response.
* ModuleTest: add a delay between sending consecutive requests.
* Ford Commit: XML scripter update, AudioPassThru without JSON, Policies Tester update, other minor bug fixes.

[CW8]
* Cut the number of debug logs during the test XML parsing process.
* Fix empty <Vector> tags parsing in test XML.
* Make the console log scrolling smoother.
* Don't remove interaction choice set from the choiceSets list until a successful DeleteChoiceSetResponse has come.
* Don't show null in the log if the responses' info is null.
* AddCommand message: set an existing icon by default.

[CW7]
* Fix displaying the success flag, info, and result code of the messages in the log.
* Fix displaying long messages in the log on narrow screens.
* Don't drop the connection to the core when pressing the Back button. Now, to disconnect use the Exit options menu item.
+ Show message's correlation ID in the Raw JSON popup.
* Update the turn list icons.
* SyncProxyAndroid SDK: when serializing a JSON RPCMessage, serialize hashtable as RPCStruct. Fix for the XML Test feature in SyncProxyTester.
- Revert: "SyncProxyAndroid SDK: Interim fix: revert the change of protocol v2 JSON messages (the "parameters" key) until the AppLinkCore has changed the parser."
* Fix a crash when trying to open Speak dialog.
* SyncProxyAndroid SDK: Interim fix: revert the change of protocol v2 JSON messages (the "parameters" key) until the AppLinkCore has changed the parser.
- SyncProxyAndroid SDK: remove MP3 and WAV values from the AudioType enum (affects AudioPassThru).
* Don't add/remove submenu from SubMenu list until a successful AddSubMenuResponse/DeleteSubMenuResponse has come.
* Ford Commit:
  1) Update module test functionality and example xml script. Place xml script on root of sdcard to deploy.